<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.main.exercise.fragment.recommendationfragment.FormRecommendationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/prompt_calories"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_calories"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/prompt_time_spent"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:inputType="numberDecimal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_spent"
            android:maxLines="1"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_46ssp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_46sdp"
        android:text="ok"
        app:cornerRadius="@dimen/_6sdp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>